// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthPasswordResetPage > should render AuthPasswordResetPage 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="typography subtitle full"
      >
        Lock It Down!
      </div>
      <div
        class="typography text medium"
      >
        Choose your dazzling new password and confirm it below. Let’s keep those sneaky hackers out!
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-password-textfield"
              id="password"
              maxlength="128"
              minlength="8"
              name="password"
              placeholder="New Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary"
          >
            <input
              class="textfield"
              data-testid="test-confirmPassword-textfield"
              id="confirmPassword"
              maxlength="128"
              minlength="8"
              name="confirmPassword"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-reset-password-button-button"
            disabled=""
            id="reset-password-button"
            name="reset-password-button"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-lock "
              data-icon="lock"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M144 144l0 48 160 0 0-48c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192l0-48C80 64.5 144.5 0 224 0s144 64.5 144 144l0 48 16 0c35.3 0 64 28.7 64 64l0 192c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 256c0-35.3 28.7-64 64-64l16 0z"
                fill="currentColor"
              />
            </svg>
            <span>
              Lock It Down!
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AuthPasswordResetPage > should render AuthPasswordResetPage when error 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="badge large red"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark "
          data-icon="xmark"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="typography subtitle small"
      >
        Oops! Something went wrong.
      </div>
      <div
        class="typography text medium"
      >
        The supplied link is invalid or has expired.
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthPasswordResetPage > should render AuthPasswordResetPage when loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      <div
        class="typography subtitle full"
      >
        Lock It Down!
      </div>
      <div
        class="typography text medium"
      >
        Choose your dazzling new password and confirm it below. Let’s keep those sneaky hackers out!
      </div>
      <form
        class="form"
      >
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-password-textfield"
              disabled=""
              id="password"
              maxlength="128"
              minlength="8"
              name="password"
              placeholder="New Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-confirmPassword-textfield"
              disabled=""
              id="confirmPassword"
              maxlength="128"
              minlength="8"
              name="confirmPassword"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction"
        >
          <button
            data-testid="test-reset-password-button-button"
            disabled=""
            id="reset-password-button"
            name="reset-password-button"
            type="submit"
          >
            <div
              class="loadingSpinner"
            >
              <div />
              <div />
              <div />
            </div>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
